# jclchat

./: .gitignore  Doxyfile  README.md  ServerSetup.md  codeblocks.md  codeblocks.txt  dir-locals.el.tmpl
src/: CMakeLists.txt  index.md
src/CreateDB/: CMakeLists.txt
src/CreateDB/src/: CreateDB.cpp  CreateDB.hpp
src/HtmlPages/: CMakeLists.txt
src/HtmlPages/include/HtmlPages/: JclPageRequestHandler.hpp
src/HtmlPages/src/: Footer.cpsp  Header.cpsp  IndexHandler.cpsp  JclPageRequestHandler.cpp  LoginHandler.cpsp  RegisterHandler.cpsp  UnknownHandler.cpsp  VerifyHandler.cpsp  WelcomeHandler.cpsp
src/JclChat/: CMakeLists.txt
src/JclChat/config/: JclChat.ini  favicon.xcf
src/JclChat/css/: .directory
src/JclChat/src/: chat.cpp
src/JclModel/: CMakeLists.txt
src/JclModel/include/JclModel/: .directory  DbConnection.hpp  Model.hpp  Session.hpp  User.hpp
src/JclModel/src/: DbConnection.cpp  Model.cpp  Session.cpp  User.cpp
src/JclServer/: CMakeLists.txt
src/JclServer/include/JclServer/: FileRequestHandler.hpp  FooterContent.hpp  HeadContent.hpp  HeaderContent.hpp  JclAction.hpp  JclRequestHandler.hpp  JclRequestHandlerFactory.hpp  JclServer.hpp  JclServerApp.hpp  LoginAction.hpp  LoginContent.hpp  LoginRequestHandler.hpp  Page.hpp  PageContent.hpp  PocoClasses.hpp  RegisterContent.hpp  RegisterRequestHandler.hpp  StandardPage.hpp  TextContent.hpp  Types.hpp  UnknownRequestHandler.hpp  VerifyContent.hpp  VerifyRequestHandler.hpp  WelcomeRequestHandler.hpp
src/JclServer/src/: FileRequestHandler.cpp  FooterContent.cpp  HeadContent.cpp  HeaderContent.cpp  JclAction.cpp  JclRequestHandler.cpp  JclRequestHandlerFactory.cpp  JclServerApp.cpp  JclServerApp.md  LoginAction.cpp  LoginContent.cpp  LoginRequestHandler.cpp  Page.cpp  PageContent.cpp  PageContent.md  RegisterContent.cpp  RegisterRequestHandler.cpp  StandardPage.cpp  TextContent.cpp  UnknownRequestHandler.cpp  VerifyContent.cpp  VerifyRequestHandler.cpp  Welcome.md  WelcomeRequestHandler.cpp
src/JclServer/test/: PageTest.cpp
src/Util/: CMakeLists.txt  CTestTestfile.cmake  Makefile  UtilConfig.cmake  cmake_install.cmake
src/Util/include/Util/: File.hpp  HtmlTags.hpp  Util.h
src/Util/src/: File.cpp  HtmlTags.cpp  Util.cpp
